even better defaults

--- a/example.bib
+++ b/example.bib
@@ -1,26 +1,45 @@
-@book{knuth-taocp-v1,
-  author    = {Donald E. Knuth},
-  title     = {{The Art of Computer Programming}},
-  publisher = {Addison-Wesley},
-  year      = {1997},
-  isbn      = {0-201-89683-4},
-  volume    = {1},
-  edition   = {3},
+@article{JMLR:PedregosaVGMTGBPWDVPCBPD11,
+  author    = {Fabian Pedregosa and
+               Ga{\"{e}}l Varoquaux and
+               Alexandre Gramfort and
+               Vincent Michel and
+               Bertrand Thirion and
+               Olivier Grisel and
+               Mathieu Blondel and
+               Peter Prettenhofer and
+               Ron Weiss and
+               Vincent Dubourg and
+               Jake VanderPlas and
+               Alexandre Passos and
+               David Cournapeau and
+               Matthieu Brucher and
+               Matthieu Perrot and
+               Edouard Duchesnay},
+  title     = {{Scikit-learn}: Machine Learning in {Python}},
+  journal   = {JMLR},
+  volume    = {12},
+  pages     = {2825--2830},
+  year      = {2011},
+  doi       = {10.5555/1953048.2078195},
 }
 
-@inproceedings{blaze-cfs,
-  title     = {{A Cryptographic File System for Unix}},
-  author    = {Matt Blaze},
-  booktitle = {Proceedings of the 1st ACM Conference on Computer and
-               Communications Security (CCS '93)},
-  year      = {1993},
-  publisher = {ACM},
-  address   = {Virginia, USA},
-  doi       = {10.1145/168588.168590},
+@article{TIT:DiffieH76,
+  author    = {Whitfield Diffie and
+               Martin E. Hellman},
+  title     = {New directions in cryptography},
+  journal   = {{IEEE} TIT},
+  volume    = {22},
+  number    = {6},
+  pages     = {644--654},
+  year      = {1976},
+  publisher = {IEEE},
+  doi       = {10.1109/TIT.1976.1055638},
 }
 
-@misc{bhattacharyya,
-  title        = {{Bhattacharyya distance}},
-  howpublished = {\url{https://en.wikipedia.org/wiki/Bhattacharyya_distance}},
-  note         = "Accessed: 2022-08-16"
+@online{bhattacharyya,
+  title        = {{Bhattacharyya} distance},
+  organization = {Wikipedia},
+  url          = {https://en.wikipedia.org/wiki/Bhattacharyya_distance},
+  note         = {Accessed: 2022-08-16},
+  year         = {2022},
 }
